Name:		drasil-data
Version:	0.0.9
Cabal-Version:  >= 1.18
Author:		Dan Szymczak, Steven Palmer, Jacques Carette, Spencer Smith
build-type:     Simple
Synopsis:	A framework for code and document generation for scientific software - Data SubPackage

library
  exposed-modules:
    Drasil.People
    Drasil.Citations
    Drasil.Constraints
    Drasil.SentenceStructures
    Drasil.SI_Units
    Drasil.Phrase
    Drasil.Utils
    Drasil.Concepts.Computation
    Drasil.Concepts.Documentation
    Drasil.Concepts.Thermodynamics
    Drasil.Concepts.PhysicalProperties
    Drasil.Concepts.Education
    Drasil.Concepts.Physics
    Drasil.Concepts.Software
    Drasil.Concepts.Math
    Drasil.Concepts.SolidMechanics
    Drasil.Software.Products
    Drasil.Quantities.Thermodynamics
    Drasil.Quantities.PhysicalProperties
    Drasil.Quantities.Physics
    Drasil.Quantities.Math
    Drasil.Quantities.SolidMechanics
    Drasil.Units.Thermodynamics
    Drasil.Units.PhysicalProperties
    Drasil.Units.Physics
    Drasil.Units.SolidMechanics

  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    MissingH >= 1.4.0.1,
    parsec >= 3.1.9,
    data-fix (>= 0.0.4 && <= 1.0)
  default-language: Haskell2010
  ghc-options:      -Wall

source-repository head
  type:     git
  location: git://github.com/JacquesCarette/Drasil.git
  subdir: code/Data