Name:		  drasil-build
Version:	0.1.0
Cabal-Version:  >= 1.18
Author:		Dan Szymczak, Steven Palmer, Jacques Carette, Spencer Smith
build-type:     Simple
Synopsis:	A framework for code and document generation for scientific software - Build System SubPackage

library
  exposed-modules:
    Build.Drasil
  other-modules:
    Build.Drasil.Make.AST,
    Build.Drasil.Make.Helpers,
    Build.Drasil.Make.Import,
    Build.Drasil.Make.Print

  Build-Depends:
    base >= 4.7,
    pretty >= 1.1.1.1,
    drasil-lang >= 0.1.52
  default-language: Haskell2010
  ghc-options:      -Wall -Wredundant-constraints


source-repository head
  type:     git
  location: git://github.com/JacquesCarette/Drasil.git
  subdir: build
