Name:		  drasil-code
Version:	0.1.7
Cabal-Version:  >= 1.18
Author:		Dan Szymczak, Steven Palmer, Jacques Carette, Spencer Smith
build-type:     Simple
Synopsis:	A framework for code and document generation for scientific software - Code SubPackage

library
  exposed-modules:
      Language.Drasil.Code
  other-modules:
      Language.Drasil.Chunk.Code
    , Language.Drasil.Chunk.CodeDefinition
    , Language.Drasil.Chunk.CodeQuantity
    , Language.Drasil.Code.Code
    , Language.Drasil.Code.CodeQuantityDicts
    , Language.Drasil.Code.DataDesc
    , Language.Drasil.Code.Imperative.Build.AST
    , Language.Drasil.Code.Imperative.Build.Import
    , Language.Drasil.Code.Imperative.Doxygen.Import
    , Language.Drasil.Code.Imperative.ReadInput
    , Language.Drasil.Code.Imperative.WriteInput
    , Language.Drasil.Code.Imperative.GOOL.Data
    , Language.Drasil.Code.Imperative.GOOL.Helpers
    , Language.Drasil.Code.Imperative.GOOL.LanguageRenderer
    , Language.Drasil.Code.Imperative.GOOL.LanguageRenderer.JavaRenderer
    , Language.Drasil.Code.Imperative.GOOL.LanguageRenderer.PythonRenderer
    , Language.Drasil.Code.Imperative.GOOL.LanguageRenderer.CSharpRenderer
    , Language.Drasil.Code.Imperative.GOOL.LanguageRenderer.CppRenderer
    , Language.Drasil.Code.Imperative.GOOL.Symantics
    , Language.Drasil.Code.Imperative.Comments
    , Language.Drasil.Code.Imperative.Descriptions
    , Language.Drasil.Code.Imperative.FunctionCalls
    , Language.Drasil.Code.Imperative.GenerateGOOL
    , Language.Drasil.Code.Imperative.Generator
    , Language.Drasil.Code.Imperative.Helpers
    , Language.Drasil.Code.Imperative.Import
    , Language.Drasil.Code.Imperative.Logging
    , Language.Drasil.Code.Imperative.Modules
    , Language.Drasil.Code.Imperative.Parameters
    , Language.Drasil.Code.Imperative.State
    , Language.Drasil.Code.CodeGeneration
    , Language.Drasil.CodeSpec

  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    filepath >= 1.4.1,
    split >= 0.2.3.1,
    MissingH >= 1.4.0.1,
    parsec >= 3.1.9,
    drasil-lang >= 0.1.52,
    drasil-utils >= 0.1.1,
    drasil-build >= 0.1.1,
    drasil-theory >= 0.1.0,
    drasil-database >= 0.1.0,
    drasil-printers >= 0.1.10
  default-language: Haskell2010
  ghc-options:      -Wall -Wredundant-constraints

executable codegenTest
  hs-source-dirs: .
  main-is: Test/Main.hs
  other-modules:
      Test.HelloWorld
    , Test.FileTests
    , Test.PatternTest
    , Test.Observer
    , Test.Helper
    , Language.Drasil.Chunk.Code
    , Language.Drasil.Chunk.CodeDefinition
    , Language.Drasil.Chunk.CodeQuantity
    , Language.Drasil.Code
    , Language.Drasil.Code.Code
    , Language.Drasil.Code.CodeQuantityDicts
    , Language.Drasil.Code.DataDesc
    , Language.Drasil.Code.Imperative.Build.AST
    , Language.Drasil.Code.Imperative.Build.Import
    , Language.Drasil.Code.Imperative.Doxygen.Import
    , Language.Drasil.Code.Imperative.ReadInput
    , Language.Drasil.Code.Imperative.WriteInput
    , Language.Drasil.Code.Imperative.GOOL.Data
    , Language.Drasil.Code.Imperative.GOOL.Helpers
    , Language.Drasil.Code.Imperative.GOOL.LanguageRenderer
    , Language.Drasil.Code.Imperative.GOOL.LanguageRenderer.JavaRenderer
    , Language.Drasil.Code.Imperative.GOOL.LanguageRenderer.PythonRenderer
    , Language.Drasil.Code.Imperative.GOOL.LanguageRenderer.CSharpRenderer
    , Language.Drasil.Code.Imperative.GOOL.LanguageRenderer.CppRenderer
    , Language.Drasil.Code.Imperative.GOOL.Symantics
    , Language.Drasil.Code.Imperative.Comments
    , Language.Drasil.Code.Imperative.Descriptions
    , Language.Drasil.Code.Imperative.FunctionCalls
    , Language.Drasil.Code.Imperative.GenerateGOOL
    , Language.Drasil.Code.Imperative.Generator
    , Language.Drasil.Code.Imperative.Helpers
    , Language.Drasil.Code.Imperative.Import
    , Language.Drasil.Code.Imperative.Logging
    , Language.Drasil.Code.Imperative.Modules
    , Language.Drasil.Code.Imperative.Parameters
    , Language.Drasil.Code.Imperative.State
    , Language.Drasil.Code.CodeGeneration
    , Language.Drasil.CodeSpec
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    filepath >= 1.4.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    MissingH >= 1.4.0.1,
    parsec >= 3.1.9,
    drasil-lang >= 0.1.52,
    drasil-utils >= 0.1.1,
    drasil-build >= 0.1.1,
    drasil-theory >= 0.1.0,
    drasil-database >= 0.1.0,
    drasil-printers >= 0.1.10
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -Wredundant-constraints -main-is Test.Main

source-repository head
  type:     git
  location: git://github.com/JacquesCarette/Drasil.git
  subdir: code
