Name:		drasil-dev
Version:	0.0.9
Cabal-Version:  >= 1.18
Author:		Dan Szymczak, Steven Palmer, Jacques Carette, Spencer Smith
build-type:     Simple
Synopsis:	A framework for code and document generation for scientific software - Development SubPackage

library
  exposed-modules:
    Language.Drasil
  other-modules:
      Language.Drasil.Unit
    , Language.Drasil.UnitLang

  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    MissingH >= 1.4.0.1,
    parsec >= 3.1.9,
    data-fix (>= 0.0.4 && <= 1.0)
    drasil-lang >= 0.0.6
  default-language: Haskell2010
  ghc-options:      -Wall

source-repository head
  type:     git
  location: git://github.com/JacquesCarette/Drasil.git
  subdir: code
